tests/errors/test_86.x
// Global var imported into namespace already exists

using math;

let PI: f64 = 20.0;

fn main() -> void {}
